--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,9 +1,9 @@
 .container {
   width: 500px;
   margin: 50px auto auto auto;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  height: 500px;
+  //border: 1px solid #ccc;
+  //border-radius: 4px;
+  //height: 500px;
   display: flex;
 }
 
