refactor code, load friends based on username

--- a/frontend/src/app/chat/chat.component.html
+++ b/frontend/src/app/chat/chat.component.html
@@ -1,23 +1,17 @@
 <div class="container">
-  <div>
-    <input
-      [(ngModel)]="currentUser"
-      type="text"
-      placeholder="Enter username..."
-      class="text-input"/>
-    <button
-      class="join-room-btn"
-      (click)="joinRoom()"
-    >Join</button>
-  </div>
-  <hr>
-  <div class="message-wrapper">
-    <div *ngFor="let message of messages"
-         [ngClass]="message.user === currentUser ? 'isMe' : 'notMe'"
+  <div class="chat-wrapper">
+    <app-friends
+      class="friends-wrapper"
+      (onChosenUser)="onChosenUser($event)"
+      [friends$]="friends$"
     >
-      <div class="message"
-      >
-        {{message.content}}
+    </app-friends>
+    <div class="message-wrapper">
+      <div *ngFor="let message of messages"
+           [ngClass]="message.user === currentUser ? 'isMe' : 'notMe'">
+        <div class="message">
+          {{message.content}}
+        </div>
       </div>
     </div>
   </div>
