--- a/frontend/src/app/chat/chat.component.scss
+++ b/frontend/src/app/chat/chat.component.scss
@@ -1,26 +1,6 @@
 .container {
   flex: 0 0 100%;
-}
-
-.text-input {
-  box-sizing: border-box;
-  padding: 10px;
-  //width: 100%;
-  margin: 10px;
-}
-
-.join-room-btn {
-  padding: 10px 30px 10px 30px;
-  background: teal;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  color: #fff;
-  text-transform: uppercase;
-  font-weight: bold;
-}
-
-.join-room-btn:hover {
-  cursor: pointer;
+  width: 100%;
 }
 
 hr {
@@ -33,12 +13,24 @@ hr {
   width: 100%;
 }
 
+.chat-wrapper {
+  display: flex;
+  width: 100%;
+  border: 1px solid #ccc;
+}
+
+.friends-wrapper {
+  flex-basis: 20%;
+  border-right: 1px solid #ccc;
+}
+
 .message-wrapper {
+  flex-basis: 80%;
   display: flex;
   flex-direction: column-reverse;
   height: 600px;
   padding: 10px;
-  border: 1px solid #ccc;
+  //border: 1px solid #ccc;
   border-radius: 5px;
   margin-bottom: 5px;
 }
