change layout, change message model and add one-to-one chat.

--- a/frontend/src/app/chat/chat-input/chat-input.component.scss
+++ b/frontend/src/app/chat/chat-input/chat-input.component.scss
@@ -9,3 +9,16 @@
   cursor: pointer;
 }
 
+.enable {
+  color: #0084ff;
+}
+
+.disabled {
+  color: #cccccc;
+}
+
+.send-btn {
+  background-color: transparent;
+  border: none;
+}
+
