--- a/frontend/src/app/chat/chat-input/chat-input.component.html
+++ b/frontend/src/app/chat/chat-input/chat-input.component.html
@@ -1,2 +1,9 @@
 <input type="text" [(ngModel)]="textMessage" placeholder="Type here..." class="text-input" (keydown)="onKeyDown($event)"/>
-<mat-icon (click)="send()" class="send-icon">send</mat-icon>
+
+<mat-icon
+  (click)="send()"
+  class="send-icon"
+  [ngClass]="textMessage === '' ? 'disabled' : 'enable'"
+>
+  send
+</mat-icon>
