fix cors config in backend, choose first user in list friend automatically

--- a/frontend/src/app/chat/chat.component.html
+++ b/frontend/src/app/chat/chat.component.html
@@ -3,7 +3,7 @@
     <app-friends
       class="friends-wrapper"
       (onChosenUser)="onChosenUser($event)"
-      [friends$]="friends$"
+      [friends]="friends"
     >
     </app-friends>
     <div class="input-message">
